--- a/serverSide/.env
+++ b/serverSide/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://hassankhan662000:SPyP8lFLG9cfZLa8@ecom.8t3y4v4.mongodb.net/HassanStore?retryWrites=true&w=majority
+JWT_SECRET_KEY=HASSOECOM
